--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
+    "axios": "^1.6.8",
+    "express": "^4.19.2",
     "framer-motion": "^11.0.21",
     "lottie-react": "^2.4.0",
+    "nodemailer": "^6.9.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.8.1",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
