--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.8.1",
+    "react-parallax": "^3.5.1",
+    "react-plx": "^2.1.2",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
